# mercado-livre-desafio-tecnico

./: .gitignore  README.md  collection.yaml
.docker/: distribution-center-api.dockerfile  docker-compose.yml  order-api.dockerfile
distribution-center-api/: pyproject.toml  requirements.txt
distribution-center-api/app/: __init__.py
distribution-center-api/app/controllers/: distribution_center.py
distribution-center-api/app/services/: distribution_center_service.py
order-api/: Makefile  example.env  go.mod  go.sum
order-api/cmd/server/: main.go
order-api/config/: config.go  config_test.go  database.go
order-api/docs/: docs.go  swagger.json  swagger.yaml
order-api/internal/domain/distribution-center/: allocate.go  allocate_test.go  retrieve.go  retrieve_test.go
order-api/internal/handler/: health.go  health_test.go  order.go  order_test.go
order-api/internal/middleware/: cors.go  cors_test.go
order-api/internal/model/: distribution_center_dto.go  order_dto.go  order_schema.go
order-api/internal/repository/: order_repository.go
order-api/internal/router/: router.go  router_test.go
order-api/pkg/httpclient/: http.go  http_test.go  request.go
order-api/pkg/logger/: logger.go  logger_test.go
