[project]
name = "distribution-center-api"
version = "0.1.0"
description = "Simple mock for querying distribution center by items"
authors = [
    {name = "masioware",email = "marcioedumartinez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
